# python-django-developer-project-52

./: .dockerignore  .env.prod  .gitignore  Makefile  README.md  docker-compose.yml
hexlet-code/: Dockerfile  docker-compose_db.yml  pyproject.toml
hexlet-code/locale/ru/LC_MESSAGES/: django.po
hexlet-code/task_manager/: settings.py  urls.py  views.py
hexlet-code/task_manager/models/: status.py
hexlet-code/task_manager/templates/: base.html  user_form.html  user_list.html
hexlet-code/task_manager/templates/registration/: login.html
hexlet-code/task_manager/templates/status/: status_confirm_delete.html  status_form.html  status_list.html
hexlet-code/task_manager/tests/: test_view_status.py  test_views.py
hexlet-code/task_manager/views_box/: auth.py  status.py
nginx/: Dockerfile  entrypoint.sh  nginx.conf.template
